t+el:[[σιντί]] ([[WT:EDIT|Assisted]]) <CD#7388958>

--- a/en/c/CD.26224.wikitext
+++ b/en/c/CD.26224.wikitext
@@ -40,7 +40,7 @@
 * French: {{t|fr|disque compact|m}},  {{t+|fr|CD|m}}
 * German: {{t+|de|CD|f}},  {{t|de|Kompaktplatte|f}}
 {{trans-mid}}
-* Greek: {{t|el|συμπαγής δίσκος|m|tr=simpagís dískos|sc=Grek}}
+* Greek: {{t|el|συμπαγής δίσκος|m|tr=simpagís dískos|sc=Grek}},  {{t|el|σιντί|n|tr=sidí|sc=Grek}}
 * Japanese: {{t|ja|シーディー|tr=sīdī|sc=Jpan}},  {{t+|ja|CD|tr=sīdī|sc=Jpan}},  {{t-|ja|コンパクトディスク|tr=konpakutodisuku|sc=Jpan}},  {{t|ja|ＣＤ|tr=sīdī|sc=Jpan}}
 * [[Macedonian]]: {{t-|mk|компакт-диск|m|tr=kómpakt-disk|sc=Cyrl|xs=Macedonian}},  {{t|mk|це-де|n|tr=ce-de|sc=Cyrl|xs=Macedonian}}
 * Russian: {{t+|ru|компакт-диск|m|tr=kompákt-disk|sc=Cyrl}},  {{qualifier|indeclinable}} {{t+|ru|CD|m|tr=si-di|sc=Cyrl}},  {{qualifier|indeclinable}} {{t|ru|си-ди|m|tr=si-di|sc=Cyrl}}
