--- a/en/c/consumption.34058.wikitext
+++ b/en/c/consumption.34058.wikitext
@@ -77,6 +77,7 @@
 [[ja:consumption]]
 [[pl:consumption]]
 [[ru:consumption]]
+[[simple:consumption]]
 [[fi:consumption]]
 [[ta:consumption]]
 [[te:consumption]]
