/* Noun */ syns <foo-foo#7397563>

--- a/en/f/foo-foo.855761.wikitext
+++ b/en/f/foo-foo.855761.wikitext
@@ -16,3 +16,6 @@
 #:''Her new potato casserole was just glorified '''foo-foo'''.''
 # {{rfv-sense}} {{US|Southern}} A [[trite]], [[mundane]], or [[unbelievable]] subject or process.
 #:''He thinks his ideas are great; we think they're '''foo-foo'''.''
+
+====Synonyms====
+*{{sense|dish of yams etc}} [[choke-me]] {{i|Caribbean}}
