--- a/en/f/foo-foo.855761.wikitext
+++ b/en/f/foo-foo.855761.wikitext
@@ -24,3 +24,6 @@ Probably from African languages such as {{etyl|ln|en}} {{term|fufú||lang=ln}}
 
 ====Synonyms====
 *{{sense|dish of yams etc}} [[choke-me]] {{i|Caribbean}}
+
+===References===
+*''Dictionary of Jamaican English‎'', page 185, Frederic Gomes Cassidy, Robert Brock Le Page, 2002 [http://books.google.com/books?id=_lmFzFgsTZYC&pg=PA185&dq=-foofoo+foo-foo&lr=&ei=tXGzSqT2NZKUyQTf-p3tAg#v=onepage&q=-foofoo foo-foo&f=false]
