--- a/en/a/assassinated.720062.wikitext
+++ b/en/a/assassinated.720062.wikitext
@@ -6,6 +6,7 @@
 # {{past of|[[assassinate]]}}
 
 [[fr:assassinated]]
+[[ml:assassinated]]
 [[sv:assassinated]]
 [[te:assassinated]]
 [[vi:assassinated]]
