--- a/en/b/bleed.6801.wikitext
+++ b/en/b/bleed.6801.wikitext
@@ -18,6 +18,9 @@ From {{etyl|ang}} {{term|bledan|lang=ang}}
 #: ''The company was '''bleeding''' talent.''
 # {{intransitive|of an ink or dye}} To [[spread]] from the intended location and [[stain]] the surrounding [[cloth]] or [[paper]].
 # {{transitive}} To [[remove]] [[air]] bubbles from a [[pipe]] containing [[fluid]]s.
+# {{obsolete|transitive}} To bleed on; to make bloody.
+#*'''1485''', Sir Thomas Malory, ''Le Morte Darthur'', Book VIII:
+#*:And so Sir Trystrames '''bledde''' bothe the over-shete and the neyther-shete, and the pylowes and the hede-shete.
 # {{intransitive|copulative}} To show one's group loyalty by showing (its associated color) in one's blood.
 #: ''He was a devoted Vikings fan: he '''bled''' purple.''
 
