--- a/en/f/fraction.34055.wikitext
+++ b/en/f/fraction.34055.wikitext
@@ -43,12 +43,13 @@ From [[Middle English]] ''[[fraccioun]]'' (a breaking), from [[Anglo-Norman]], f
 * [[Catalan]]: [[fracció]], {{f}}
 * Croatian: {{t+|hr|dio|m|alt=dȉo}}, {{t|hr|odsječak|m|alt=òdsječak}}
 * Czech: {{t-|cs|zlomek|m}}
+* Danish: {{t|da|brøkdel|c}}
 * Finnish: {{t-|fi|murto-osa}}
 * French: {{t+|fr|fraction|f}}
 * Irish: {{t|ga|codán|m|xs=Irish}}
 * Italian: {{t+|it|frazione|f}}
-* Japanese: [[断片]] (dan-pen)
 {{trans-mid}}
+* Japanese: [[断片]] (dan-pen)
 * [[Macedonian]]: {{t|mk|дел|m|tr=del|sc=Cyrl|xs=Macedonian}},  {{t|mk|делче|n|tr=délče|sc=Cyrl|xs=Macedonian}}
 * Norwegian: {{t-|no|andel|m}}, {{t|no|fraksjon|m}}
 * Polish: {{t+|pl|ułamek|m}}, {{t+|pl|cząstka|f}}
@@ -62,13 +63,14 @@ From [[Middle English]] ''[[fraccioun]]'' (a breaking), from [[Anglo-Norman]], f
 * [[Catalan]]: [[fracció]], {{f}}
 * Croatian: {{t-|hr|razlomak|m|alt=rázlomak}}
 * Czech: {{t-|cs|zlomek|m}}
+* Danish: {{t|da|brøk|c}}
 * Dutch: {{t+|nl|breuk|c}}
 * Finnish: {{t+|fi|murtoluku}}
 * French: {{t+|fr|fraction|f}}
 * Irish: {{t|ga|codán|m|xs=Irish}}
 * Italian: {{t+|it|frazione|f}}
-* Japanese: [[分数]] (bunsū)
 {{trans-mid}}
+* Japanese: [[分数]] (bunsū)
 * [[Macedonian]]: {{t|mk|дропка|f|tr=drópka|sc=Cyrl|xs=Macedonian}}
 * Norwegian: {{t|no|brøk|m}}, {{t|no|fraksjon|m}}
 * Persian: {{t|fa|کسر|sc=fa-Arab|xs=Persian}}
