common noun <ADH#7410516>

--- a/en/a/ADH.26250.wikitext
+++ b/en/a/ADH.26250.wikitext
@@ -2,7 +2,7 @@
 ==={{initialism}}===
 '''ADH'''
 
-#[[antidiuretic|Antidiuretic]] [[hormone|Hormone]]
+#[[antidiuretic]] [[hormone]]
 #[[alcohol]] [[dehydrogenase]]
 [[he:ADH]]
 [[pl:ADH]]
