/* Adverb */ +example sentence: "The South will rise again." <again#7412771>

--- a/en/a/again.4310.wikitext
+++ b/en/a/again.4310.wikitext
@@ -22,6 +22,7 @@
 #*:: Merlin warned the king covertly that Guinevere was not wholesome for him to take as his wife, for he warned him that Lancelot should love her and she him '''again''' {{...}}
 # [[back|Back]] (to a former place or state).
 #:''We need to bring the old customs to life '''again'''.''
+#: ''The South will rise '''again'''.''
 # Another time; once more.
 #: ''I didn't do a very good job the first time, and now I have to do it '''again'''.''
 #* '''1979''', Charles Edward Daniels et al., “The Devil Went Down to Georgia” (song), ''Million Mile Reflections'', Charlie Daniels Band, Epic Records:
