--- a/en/c/consumption.34058.wikitext
+++ b/en/c/consumption.34058.wikitext
@@ -11,7 +11,7 @@
 # The amount [[consume|consumed]].
 #: ''gross national '''consumption'''''
 # {{pathology}} The [[waste away|wasting-away]] of the human body through [[disease]].
-# {{pathology|dated}} [[pulmonary tuberculosis]].
+# {{pathology|dated}} [[pulmonary tuberculosis|Pulmonary tuberculosis]].
 
 ====Derived terms====
 * [[conspicuous consumption]]
