--- a/en/a/again.4310.wikitext
+++ b/en/a/again.4310.wikitext
@@ -32,11 +32,11 @@
 #*: Cirri <span style="font-variant:small-caps">l-lxxx</span>, 15, about 12mm. long; first two joints short, about twice as broad as long; third about one-third '''again''' [=one and one-third times] as long as broad; fourth and fifth the longest, about half '''again''' [=one and a half times] as long as broad; {{...}}
 # {{non-gloss definition|Used metalinguistically, with the repetition being in the discussion, or in the linguistic or pragmatic context of the discussion, rather than in the subject of discussion.}}
 #: ''Great, thanks '''again'''!''
-## {{non-gloss definition|Used in asking a question to which one may have already received the answer, but cannot remember it.}}
+## Tell me again, say again; {{non-gloss definition|used in asking a question to which one may have already received the answer, but cannot remember it.}}
 ##: ''What's that called, '''again'''?''
-## {{non-gloss definition|Used in repeating a question or statement; perhaps elliptical for "I ask again" or "I say again".}}
+## I ask again, I say again; {{non-gloss definition|used in repeating a question or statement.}}
 ##: '''''Again''', as I said before, I'm not criticizing, I just want to understand.''
-## {{non-gloss definition|Used in applying a previously made point to a new instance.}}
+## Here too, here also, in this case as well; {{non-gloss definition|used in applying a previously made point to a new instance; sometimes preceded by "here".}}
 ##: ''Approach B is better than approach A in many respects, but '''again''', there are implementation difficulties in implementing it.''
 
 ====Derived terms====
