t+fy:[[West-Frysk]] ([[WT:EDIT|Assisted]]) <West Frisian#7417804>

--- a/en/w/West Frisian.741118.wikitext
+++ b/en/w/West Frisian.741118.wikitext
@@ -30,6 +30,7 @@ Some linguists consider West Frisian, Saterland Frisian, and North Frisian to be
 {{trans-mid}}
 * Italian: dialetto frisone occidentale (ad hoc)
 * Polish: {{t|pl|zachodnio-fryzyjski|m}}
+* [[West Frisian]]: {{t|fy|West-Frysk}}
 {{trans-bottom}}
 
 {{checktrans}}
