* before ISO 639, sorted/rebalanced translations, trans unlink West Frisian <West Frisian#7417904>

--- a/en/w/West Frisian.741118.wikitext
+++ b/en/w/West Frisian.741118.wikitext
@@ -27,10 +27,10 @@ Some linguists consider West Frisian, Saterland Frisian, and North Frisian to be
 {{trans-top|the Western Frisian dialect of Dutch}}
 * Dutch: {{t|nl|West-Fries}}
 * Finnish: [[länsifriisi|länsifriisiläinen]] [[murre]]
-{{trans-mid}}
 * Italian: dialetto frisone occidentale (ad hoc)
+{{trans-mid}}
 * Polish: {{t|pl|zachodnio-fryzyjski|m}}
-* [[West Frisian]]: {{t|fy|West-Frysk}}
+* West Frisian: {{t|fy|West-Frysk}}
 {{trans-bottom}}
 
 {{checktrans}}
@@ -43,7 +43,7 @@ Please distinguish between the Frisian language group, the West Frisian language
 
 ===See also===
 * {{pedialite|West Frisian language}}
-{{ISO 639|1code=fy|3code=fry}}
+* {{ISO 639|1code=fy|3code=fry}}
 
 [[fy:West Frisian]]
 [[no:West Frisian]]
