t+nv:[[nááná]] ([[WT:EDIT|Assisted]]) <again#7421554>

--- a/en/a/again.4310.wikitext
+++ b/en/a/again.4310.wikitext
@@ -91,6 +91,7 @@
 * Maori: {{t-|mi|anō|xs=Maori}}
 * {{trreq|Mongolian}}
 * [[Nahuatl]]: {{t-|nah|occeppa|xs=Nahuatl}}
+* Navajo: {{tø|nv|nááná}}
 * Norwegian: {{t+|no|igjen}}
 * Persian: {{fa-Arab|[[دگربار]]}}
 * Polish: [[ponownie]], [[jeszcze raz]], [[znowu]]
