t+ar:[[مرة اخرى]] ([[WT:EDIT|Assisted]]) <again#7421742>

--- a/en/a/again.4310.wikitext
+++ b/en/a/again.4310.wikitext
@@ -46,7 +46,7 @@
 ====Translations====
 {{trans-top|another time}}
 * [[Afrikaans]]: [[weer]], [[alweer]]
-* Arabic: {{Arab|[[مرة اخرى]]}} (mára ’úxra)
+* Arabic: {{Arab|[[مرة اخرى]]}} (mára ’úxra),  {{t|ar|مرة اخرى|f|tr=márra ’úxra|sc=Arab}}
 * Armenian: [[էլի]] (ēli)
 * [[Basque]]: [[berriro]]
 * [[Breton]]: [[adarre]]
