--- a/en/a/again.4310.wikitext
+++ b/en/a/again.4310.wikitext
@@ -122,7 +122,7 @@
 * {{trreq|German}}
 {{trans-mid}}
 * {{trreq|Hungarian}}
-* {{trreq|Japanese}}
+* Japanese: {{qualifier|verbs in past tense, present meaning}} {{t|ja|って|tr=-tte|sc=Jpan}}
 * {{trreq|Portuguese}}
 * Russian: {{t|ru|говорите|sc=Cyrl|tr=govorít'e}}
 * {{trreq|Spanish}}
