--- a/en/a/again.4310.wikitext
+++ b/en/a/again.4310.wikitext
@@ -46,7 +46,7 @@
 ====Translations====
 {{trans-top|another time}}
 * [[Afrikaans]]: [[weer]], [[alweer]]
-* Arabic: {{t|ar|مرة اخرى|f|tr=márra ’úxra|sc=Arab}},  {{t|ar|كرة أخرى|f|tr=kárra(tan) ’úxra|sc=Arab}}
+* Arabic: {{t|ar|مرة اخرى|f|tr=márra(tan) 'úkhra|sc=Arab}},  {{t|ar|كرة أخرى|f|tr=kárra(tan) 'úkhra|sc=Arab}} {{adverbial accusative used}}
 * Armenian: [[էլի]] (ēli)
 * [[Basque]]: [[berriro]]
 * [[Breton]]: [[adarre]]
