--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -21,8 +21,8 @@ From {{etyl|ang|en}} {{term|blawan|blāwan|make an air current, sound a wind ins
 #: ''The leaves '''blow''' through the streets in the fall.''
 # {{intransitive}} To [[explode]].
 #: ''Get away from that burning gas tank!  It's about to '''blow'''!''
-# {{intransitive|slang}} To be very [[undesirable]]; to be greatly [[inferior]] to one's [[approval]] or [[satisfaction]]. (see also [[suck]]).
-#: ''This new Communist healthcare program '''blows'''!''
+# {{intransitive|slang}} To be very [[undesirable]] (see also [[suck]]).
+#: ''This '''blows'''!''
 # {{intransitive|of a [[cetacean]]}} To [[exhale]] [[visibly]] through the [[spout]] the [[seawater]] which it has taken in while [[feeding]].
 #: ''There's nothing more thrilling to the whale watcher than to see a whale surface and '''blow'''.''
 #: ''There she '''blows'''! (i.e. "I see a whale spouting!")''
