--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -93,9 +93,9 @@
 * Italian: {{t+|it|isola|f}}
 * Japanese: {{t+|ja|島|tr=[[しま]], shimá|sc=Jpan}}
 * {{trreq|Kannada}}
-* [[Kazakh]]: {{t|kk|арал|tr=aral|sc=Cyrl}}
-* [[Khmer]]: {{t-|km|កោះ|tr=goh|sc=Khmr|xs=Khmer}}
+* Kazakh: {{t|kk|арал|tr=aral|sc=Cyrl}}
 {{trans-mid}}
+* [[Khmer]]: {{t-|km|កោះ|tr=goh|sc=Khmr|xs=Khmer}}
 * Korean: {{t+|ko|섬|tr=seom|sc=Hang}}
 * Lao: {{t-|lo|ດອນ|tr=''döön''|sc=Laoo|xs=Lao}}
 * Latin: {{t+|la|insula|f}}
