iwiki +[[:kn:leather]] <leather#7448993>

--- a/en/l/leather.4309.wikitext
+++ b/en/l/leather.4309.wikitext
@@ -138,6 +138,7 @@ Old English ''[[leþer]]''
 [[io:leather]]
 [[id:leather]]
 [[it:leather]]
+[[kn:leather]]
 [[kk:leather]]
 [[lo:leather]]
 [[hu:leather]]
