/* Adverb */ removed double word "implementation" in example sentence. <again#7458143>

--- a/en/a/again.4310.wikitext
+++ b/en/a/again.4310.wikitext
@@ -37,7 +37,7 @@
 ## I ask again, I say again; {{non-gloss definition|used in repeating a question or statement.}}
 ##: '''''Again''', as I said before, I'm not criticizing, I just want to understand.''
 ## Here too, here also, in this case as well; {{non-gloss definition|used in applying a previously made point to a new instance; sometimes preceded by "here".}}
-##: ''Approach B is better than approach A in many respects, but '''again''', there are implementation difficulties in implementing it.''
+##: ''Approach B is better than approach A in many respects, but '''again''', there are difficulties in implementing it.''
 
 ====Derived terms====
 * [[again and again]]
