--- a/en/c/consonance.746531.wikitext
+++ b/en/c/consonance.746531.wikitext
@@ -9,10 +9,12 @@
 
 ====Translations====
 {{trans-top|the repetition of consonant sounds}}
+* Bulgarian: {{t|bg|съзвучие|n|sc=Cyrl}}
 {{trans-mid}}
 {{trans-bottom}}
 
 {{trans-top|music harmony; agreement}}
+* Bulgarian: {{t|bg|съгласие|n|sc=Cyrl}},  {{t|bg|хармония|f|sc=Cyrl}}
 * Italian: {{t+|it|consonanza|f}}
 {{trans-mid}}
 {{trans-bottom}}
