--- a/en/c/cauliflower.34088.wikitext
+++ b/en/c/cauliflower.34088.wikitext
@@ -2,6 +2,7 @@
 [[Image:Cauliflower.jpg|thumb|right|200px|A budding cauliflower plant.]]
 
 ===Pronunciation===
+* {{audio|en-au-cauliflower.ogg|Audio (Australia)}}
 * {{audio|en-us-cauliflower.ogg|Audio (US)}}
 
 ===Noun===
