--- a/en/b/bubble.7366.wikitext
+++ b/en/b/bubble.7366.wikitext
@@ -162,6 +162,7 @@ Partly imitative, also influenced by {{term|burble}}.
 [[kn:bubble]]
 [[lo:bubble]]
 [[hu:bubble]]
+[[nl:bubble]]
 [[ru:bubble]]
 [[fi:bubble]]
 [[sv:bubble]]
