--- a/en/c/cauliflower.34088.wikitext
+++ b/en/c/cauliflower.34088.wikitext
@@ -30,7 +30,7 @@
 {{trans-mid}}
 * German: {{t|de|Blumenkohl|m}},  {{t|de|Karfiol|m}}
 * Greek: {{t|el|κουνουπίδι|n|tr=kunupídi}}
-* Japanese: {{t-|ja|カリフラワー|tr=karifurawaa}}
+* Japanese: {{t-|ja|カリフラワー|tr=karifurawā}}
 * [[Macedonian]]: {{t-|mk|карфиол|m|tr=karfiól|xs=Macedonian}}
 * Polish: {{t+|pl|kalafior|m}}
 * Russian: {{t+|ru|цветная капуста|f|tr=cvetnája kapústa}}
