--- a/en/c/consume.34056.wikitext
+++ b/en/c/consume.34056.wikitext
@@ -36,6 +36,7 @@ From {{etyl|la}} ''[[consumere]]''.
 
 ====Translations====
 {{trans-top|to use}}
+* Bulgarian: {{t|bg|изразходвам|sc=Cyrl}}
 * Czech: {{t-|cs|spotřebovat}}
 * Dutch: {{t-|nl|consumeren}}, {{t-|nl|verbruiken}}
 * Finnish: {{t-|fi|kuluttaa}}
@@ -48,6 +49,7 @@ From {{etyl|la}} ''[[consumere]]''.
 {{trans-bottom}}
 
 {{trans-top|to eat}}
+* Bulgarian: {{t|bg|изяждам|sc=Cyrl}},  {{t|bg|изпивам|sc=Cyrl}}
 * Dutch: {{t-|nl|consumeren}}
 * Finnish: {{t-|fi|kuluttaa}}, {{t+|fi|syödä}}
 * French: {{t+|fr|consommer}}
@@ -59,12 +61,14 @@ From {{etyl|la}} ''[[consumere]]''.
 {{trans-bottom}}
 
 {{trans-top|to occupy}}
+* Bulgarian: {{t|bg|заемам|sc=Cyrl}},  {{t|bg|отнемам|sc=Cyrl}}
 * Dutch: {{t+|nl|bezighouden}}, {{t-|nl|verteren}}
 {{trans-mid}}
 * Finnish: {{t-|fi|kuluttaa}}, {{t+|fi|kalvaa}}
 {{trans-bottom}}
 
 {{trans-top|to destroy completely}}
+* Bulgarian: {{t|bg|поглъщам|sc=Cyrl}}
 * Dutch: {{t-|nl|verteren}}, {{t-|nl|consumeren}}
 * Finnish: {{t+|fi|tuhota}}, {{t-|fi|tuhoutua}}
 {{trans-mid}}
