t+ka:[[ბოცვერი]] ([[WT:EDIT|Assisted]]) <rabbit#7471688>

--- a/en/r/rabbit.8241.wikitext
+++ b/en/r/rabbit.8241.wikitext
@@ -68,6 +68,7 @@ From Northern [[French]].
 * French: {{t+|fr|lapin|m}}
 * [[Friulian]]: [[cunin]]
 * [[Galician]]: [[coello]]
+* Georgian: {{t|ka|ბოცვერი|tr=botc'veri|sc=Geor}}
 * German: {{t+|de|Kaninchen|n}}
 * Greek:
 *: Ancient: [[κούνικλος]] (kuniklos) {{m}}
