--- a/en/v/voornamelijk.4107.wikitext
+++ b/en/v/voornamelijk.4107.wikitext
@@ -1,19 +1,17 @@
 ==Dutch==
 ===Etymology===
-From ''[[voornaam]]'' + ''[[-lijk]]''.
+{{suffix|voornaam|lijk|lang=nl}}
 
 ===Pronunciation===
 * {{audio|Nl-voornamelijk.ogg|audio}}
 
 ===Adverb===
-'''voornamelijk'''
+{{nl-adv|*}}
 
 # [[mainly]], [[mostly]]; [[predominantly]]
 
 ====Abbreviations====
 * [[vnl.]]
-
-[[Category:Dutch adverbs]]
 
 [[fr:voornamelijk]]
 [[id:voornamelijk]]
