--- a/en/s/simple.7363.wikitext
+++ b/en/s/simple.7363.wikitext
@@ -107,6 +107,7 @@
 * Italian: {{t+|it|semplice}}
 {{trans-mid}}
 * Japanese: [[簡単な]] (kantan na), [[単純な]] (tanjun na)
+* [[Kazakh]]: {{t|kk|қарапайым|tr=qarapayım|sc=Cyrl}}
 * Korean: [[간단한]] (gandanhan)
 * Kurdish:
 *: Sorani: {{t|ku|ئاسان|tr=AsAn|sc=ku-Arab}}, {{t|ku|ساکار|tr=sAkAr|sc=ku-Arab}}
