/* Adjective */ add synonym <simple#7490149>

--- a/en/s/simple.7363.wikitext
+++ b/en/s/simple.7363.wikitext
@@ -182,6 +182,9 @@ From {{etyl|la|ca}} {{term|lang=la|simplex}}.
 # [[#Adjective|simple]] {{gloss|uncomplicated}}
 # [[single]] {{gloss|not divided into parts}}
 
+====Synonyms====
+* {{l|ca|senzill}}
+
 ====Derived terms====
 * {{l|ca|fulla simple|gloss=simple leaf}}
 * {{l|ca|simplement|gloss=simply}}
