--- a/en/w/weight.7355.wikitext
+++ b/en/w/weight.7355.wikitext
@@ -20,6 +20,7 @@
 # An object used to make something heavier.
 # A [[standardized]] block of [[metal]] used in a [[balance]] to measure the [[mass]] of another object.
 # {{weightlifting}} A [[disc]] of [[iron]], [[dumbbell]], or [[barbell]] used for training the [[muscle]]s.
+#: ''He's working out with '''weights'''.''
 # {{physics}} [[mass|Mass]] ([[net weight]], [[atomic weight]], [[molecular weight]], [[troy weight]], [[carat weight]], etc.).
 # {{statistics}} A variable which multiplies a value for ease of statistical manipulation.
 # {{topology}} The smallest cardinality of a base.
