/* Danish */ Pronunciation <pig#7494185>

--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -294,8 +294,11 @@
 ==Danish==
 
 ===Etymology===
-
 From {{etyl|non|da}} {{term|pík|lang=non}}.
+
+====Pronunciation====
+* {{IPA|/pig/|[pʰiɡ̊]|lang=da}}
+* {{homophones|pik|lang=da}}
 
 ===Noun===
 {{da-noun|en|e|stem=pigg}}
