t-balance t+el:[[νησί]] t+el:[[νησίδα]] ([[WT:EDIT|Assisted]]) <island#7498867>

--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -94,8 +94,8 @@
 * Japanese: {{t+|ja|島|tr=[[しま]], shimá|sc=Jpan}}
 * {{trreq|Kannada}}
 * Kazakh: {{t-|kk|арал|tr=aral|sc=Cyrl|xs=Kazakh}}
-{{trans-mid}}
 * [[Khmer]]: {{t-|km|កោះ|tr=goh|sc=Khmr|xs=Khmer}}
+{{trans-mid}}
 * Korean: {{t+|ko|섬|tr=seom|sc=Hang}}
 * Lao: {{t-|lo|ດອນ|tr=''döön''|sc=Laoo|xs=Lao}}
 * Latin: {{t+|la|insula|f}}
@@ -163,6 +163,7 @@
 * Faroese: {{t-|fo|oyggj|f|xs=Faroese}}
 * Finnish: {{t-|fi|saareke}}
 * French: {{t+|fr|île|f}}
+* Greek: {{t|el|νησί|n|tr=nisí|sc=Grek}},  {{t|el|νησίδα|f|tr=nisíða|sc=Grek}}
 * Hebrew: {{he-translation|אי|i|wv=אִי}} {{m}}
 * Hungarian: {{t+|hu|sziget}}
 * Icelandic: {{t+|is|eyja|f}}, {{t|is|eyland|n}}
