--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -7,9 +7,9 @@ From {{etyl|ang|en}} {{term|blawan|blāwan|make an air current, sound a wind ins
 ====Pronunciation====
 * {{a|UK}} {{IPA|/bləʊ/}}, {{SAMPA|/"bl@U/}}
 *: {{rhymes|əʊ}}
-* {{a|US}} {{IPA|/blɔʊ/}}, {{SAMPA|/'blOU/}}
+* {{a|US}} {{IPA|/bloʊ/}}, {{SAMPA|/'bloU/}}
 *: {{audio|en-us-blow.ogg|Audio (US)}}
-{{rfp|is the US pronunciation really /ɔʊ/ not /oʊ/?|Are the other etymologies pronounced the same?, esp. Ety 3}}
+{{rfp|Are the other etymologies pronounced the same?, esp. Ety 3}}
 
 ====Verb====
 {{en-verb|blows|blowing|'''[[blew]]''' or (''dialect'') '''[[blowed]]'''|'''[[blown]]''' or (''dialect'') '''[[blowed]]'''}}
