-{{top}} +{{trans-top}}, sorted/rebalanced translations <prepackaged#7504193>

--- a/en/p/prepackaged.719989.wikitext
+++ b/en/p/prepackaged.719989.wikitext
@@ -6,11 +6,10 @@
 # {{past of|[[prepackage]]}}
 
 ====Translations====
-{{top}}
+{{trans-top}}
 * Italian: {{t-|it|preconfezionato}}
-{{mid}}
-
-{{bottom}}
+{{trans-mid}}
+{{trans-bottom}}
 
 ===Adjective===
 {{en-adj}}
@@ -18,10 +17,9 @@
 # That has been [[packaged]] prior to being sold
 
 ====Translations====
-{{top}}
+{{trans-top}}
 * Italian: {{t-|it|preconfezionato}}
-{{mid}}
-
-{{bottom}}
+{{trans-mid}}
+{{trans-bottom}}
 
 [[vi:prepackaged]]
