--- a/en/t/theory.7354.wikitext
+++ b/en/t/theory.7354.wikitext
@@ -162,6 +162,7 @@ English since 1613, from French ''[[théorie]]'' < Latin ''[[theoria]]'' < Greek
 * French: {{t+|fr|théorie|f}}
 * German: {{t+|de|Theorie|f}}
 * Greek: {{t+|el|θεωρία|f|sc=Grek}}
+* Hindi: {{t|hi|सिद्धान्त|sc=Deva}}
 * Italian: {{t+|it|teoria|f}}
 * Japanese: {{t-|ja|定理|tr=teiri|sc=Jpan}}, {{t+|ja|理論|tr=riron|sc=Jpan}}, {{t|ja|学説|tr=gakusetsu|sc=Jpan}}
 {{trans-mid}}
