--- a/en/r/rabbit.8241.wikitext
+++ b/en/r/rabbit.8241.wikitext
@@ -71,7 +71,7 @@ From Northern [[French]].
 * Georgian: {{t|ka|ბოცვერი|tr=botc'veri|sc=Geor}}
 * German: {{t+|de|Kaninchen|n}}
 * Greek:
-*: Ancient: {{tø|grc|κούνικλος|m|tr=kuniklos|sc=polytonic}}
+*: Ancient: {{tø|grc|κούνικλος|m|tr=kouniklos|sc=polytonic}}
 *: Modern: {{t+|el|κουνέλι|n|tr=kounéli|sc=Grek}}, {{t|el|κόνικλος|m|tr=kóniklos|sc=Grek}}
 * [[Gujarati]]: [[સસલું]] (saslu.n)
 * Hebrew: [[ארנב]] (arnav) {{m}}
