/* English */ etymology - format <theory#7510590>

--- a/en/t/theory.7354.wikitext
+++ b/en/t/theory.7354.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Etymology===
-English since 1613, from French ''[[théorie]]'' < Latin ''[[theoria]]'' < Greek {{polytonic|[[θεωρία]]}} ("contemplation, speculation, a looking at, things looked at") < {{polytonic|[[θεωρέω]]}} (to look at, view, consider, examine) < {{polytonic|[[θεωρός]]}} (spectator) < {{polytonic|[[θέα]]}} (a view) + {{polytonic|[[ὁράω]]}} (to see, to look).
+English since 1613, from {{etyl|fr}} {{term|lang=fr|théorie}} < {{etyl|la}} {{term|lang=la|theoria}} < {{etyl|grc}} {{term|lang=grc|θεωρία||contemplation, speculation, a looking at, things looked at}} < {{term|lang=grc|θεωρέω||I  look at, view, consider, examine}} < {{term|lang=grc|θεωρός||spectator}} < {{term|lang=grc|θέα||a view}} + {{term|lang=grc|ὁράω||I see,look}}.
 
 ===Pronunciation===
 * {{audio|en-us-theory.ogg|Audio (US)}}
