/* Etymology */ ++ <Panchen Lama#7517529>

--- a/en/p/Panchen Lama.741373.wikitext
+++ b/en/p/Panchen Lama.741373.wikitext
@@ -2,7 +2,7 @@
 {{wikipedia}}
 
 ===Etymology===
-{{etyl|sa|bo}} {{term|lang=sa|sc=Deva|tr=paṇḍita|||scholar}} + {{etyl|bo|-}} {{term|lang=bo|sc=Tibt|tr=chenpo|||great}} {{rfscript|Devanagari}} {{rfscript|Tibetan}}
+{{etyl|bo}} {{term|lang=bo|sc=Tibt|པན་ཆེན་བླ་མ|tr=Pan-chen Bla-ma}}. From {{etyl|sa|bo}} {{term|lang=sa|sc=Deva|tr=paṇḍita|||scholar}} + {{etyl|bo|-}} {{term|lang=bo|sc=Tibt|tr=chenpo|||great}} {{rfscript|Devanagari}} {{rfscript|Tibetan}} + {{etyl|bo|-}} {{term|lang=bo|sc=Tibt|བླ་མ|tr=bla-ma}}
 
 ===Noun===
 {{en-noun}}
