trans link [[Catalan]], trans link [[Tagalog]], trans link [[Upper Sorbian]] <Panchen Lama#7517583>

--- a/en/p/Panchen Lama.741373.wikitext
+++ b/en/p/Panchen Lama.741373.wikitext
@@ -11,7 +11,7 @@
 
 ====Translations====
 {{trans-top}}
-* Catalan: {{t|ca|Panchen Lama}}
+* [[Catalan]]: {{t|ca|Panchen Lama}}
 * Chinese: {{t|zh|sc=Hant|班禪喇嘛}}, {{t|zh|sc=Hans|班禅喇嘛}}; {{t|zh|sc=Hant|班禪額爾德尼}}, {{t|zh|sc=Hans|班禅额尔德尼}}
 * Czech: {{t|cs|Pančhenlama}}
 * Danish: {{t|da|Panchen Lama}}
@@ -36,9 +36,9 @@
 * Sovene: {{t|sl|Pančen Lama}}
 * Spanish: {{t|es|Panchen Lama}}
 * Swedish: {{t|sv|Panchen lama}}
-* Tagalog: {{t|tl|Panchen Lama}}
+* [[Tagalog]]: {{t|tl|Panchen Lama}}
 * Tibetan: {{t|bo|sc=Tibt|པན་ཆེན་བླ་མ|tr=Pan-chen Bla-ma}}
-* Upper Sorbian: {{t|hsb|Panchen Lama}}
+* [[Upper Sorbian]]: {{t|hsb|Panchen Lama}}
 * Urdu: {{t|ur|sc=ur-Arab|پنچن لاما}}
 * Vietnamese: {{t|vi|Ban-thiền Lạt-ma}}
 {{trans-bottom}}
