--- a/en/p/panic rev.741223.wikitext
+++ b/en/p/panic rev.741223.wikitext
@@ -3,4 +3,4 @@
 ===Noun===
 {{en-noun|sg=[[panic]] [[rev]]}}
 
-# {{motorcross}} In [[motocross]], the [[revving]] of the engine the [[airborne]] [[engine]], if the front wheel of the bike is too low after executing a jump. The purpose is to [[accelerate]] the [[rotation]] of the [[rear]] [[tire]], thereby raising the front end of the [[bike]].
+# {{sports}} In [[motocross]], the [[revving]] of the engine the [[airborne]] [[engine]], if the front wheel of the bike is too low after executing a jump. The purpose is to [[accelerate]] the [[rotation]] of the [[rear]] [[tire]], thereby raising the front end of the [[bike]].
