/* Latin */ expanded <multicolor#7523341>

--- a/en/m/multicolor.34078.wikitext
+++ b/en/m/multicolor.34078.wikitext
@@ -1,15 +1,15 @@
 ==English==
 
-===Pronunciation===
-'''mul*ti-co*lor'''
-
-MOHL-tee-koh/kuh-luhr
+===Alternative spellings===
+* (''Chiefly Canadian, Australian, Jamaican, British, International'') [[multicolour]]
 
 ===Etymology===
 {{etyl|la}} {{prefix|multi|color}}
 
-===Alternative spellings===
-* (''Chiefly Canadian, Australian, Jamaican, British, International'') [[multicolour]]
+===Pronunciation===
+'''mul*ti-co*lor'''
+
+MOHL-tee-koh/kuh-luhr
 
 ===Adjective===
 {{infl|en|adjective}}  (''Chiefly American'')
@@ -30,9 +30,32 @@ MOHL-tee-koh/kuh-luhr
 ----
 
 ==Latin==
+
+===Etymology===
+From {{term|multus||much, many|lang=la}} + {{term|color||color|lang=la}}.
+
+===Pronunciation===
+* {{a|Classical}} {{IPA|/mulˈti.co.lor/|lang=la}}
+
 ===Adjective===
-{{infl|la|adjective}}
-# [[multicolor]]
+{{la-adj-3rd-1E|multicolor|multicoloris|multicolōris}}
+
+# Of many [[color]]s, many-[[colored]], [[multicolored]], [[#English|multicolor]].
+# {{context|substantive|lang=la}} A multicolored [[garment]].
+
+====Inflection====
+{{la-decl-3rd-1E|multicolor|multicolor|multicolor|multicolōr}}
+
+====Synonyms====
+* {{sense|multicolored}} [[multicolorus|multicolōrus]]
+
+====Related terms====
+* [[color#Latin|color]]
+* [[multicolorus|multicolōrus]]
+* [[multus]]
+
+===References===
+* {{R:L&S}}
 
 [[el:multicolor]]
 [[fr:multicolor]]
