t+da:[[blæse]] t+da:[[puste]] ([[WT:EDIT|Assisted]]) <blow#7523642>

--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -83,6 +83,7 @@ From {{etyl|ang|en}} {{term|blawan|blāwan|make an air current, sound a wind ins
 * [[Catalan]]: {{t+|ca|bufar}}
 * Chinese: {{t-|cmn|吹|tr=chuī|sc=Hani}}, {{zh-tsp|颳|刮|guā}}
 * Czech: {{t-|cs|vát}}, {{t-|cs|vanout}}, {{t-|cs|foukat}}
+* Danish: {{t|da|blæse}},  {{t|da|puste}}
 * Dutch: {{t+|nl|blazen}},  {{t+|nl|waaien}}
 * Finnish: {{t+|fi|puhaltaa}}
 * French: {{t+|fr|souffler}}
@@ -110,6 +111,7 @@ From {{etyl|ang|en}} {{term|blawan|blāwan|make an air current, sound a wind ins
 {{trans-top|be propelled by an air current}} <!--2-->
 * Chinese:
 *: Mandarin: {{zh-tsp|隨風飄動|随风飘动|suí fēng piāo dòng}}
+* Danish: {{t|da|blæse}}
 * Finnish: [[puhaltua]]
 * German: {{t+|de|wehen}}
 {{trans-mid}}
