--- a/en/a/attend.7359.wikitext
+++ b/en/a/attend.7359.wikitext
@@ -29,7 +29,7 @@ From {{etyl|fro}} {{term|atendre}} < {{etyl|la}} {{term|attendere||to stretch to
 * Hungarian: {{t|hu|eljár}}, {{t+|hu|jár}}
 {{trans-mid}}
 * Japanese: {{t+|ja|出席|alt=出席する|tr=しゅっせきする, shusseki-surú|sc=Jpan}},  {{t|ja|立ち会う|tr=たちあう, tachiau|sc=Jpan}}
-* Polish: uczęszczać, brać udział
+* Polish: [[uczęszczać]], [[brać udział]]
 * Portuguese: [[assistir]], [[participar em]], [[estar presente em]]
 * Russian: {{t|ru|посещать|tr=poseščát'|sc=Cyrl}},  {{t|ru|присутствовать|tr=prisútstvovat'|sc=Cyrl}}
 * Spanish: {{t-|es|asistir}}
