--- a/en/f/fraction.34055.wikitext
+++ b/en/f/fraction.34055.wikitext
@@ -101,6 +101,20 @@ From [[Middle English]] ''[[fraccioun]]'' (a breaking), from [[Anglo-Norman]], f
 * {{R:Dictionary.com|fraction}}
 * {{R:American Heritage 2000|fraction}}
 * {{R:WordNet 2003|fraction}}
+----
+==French==
+
+===Noun===
+{{fr-noun|f}}
+
+# [[fraction]] (small amount)
+# {{math|lang=fr}} [[fraction]]
+# [[fraction]], [[breakup]]
+
+====Derived terms====
+*[[fractionnaire]]
+*[[fractionner]]
+
 
 [[de:fraction]]
 [[et:fraction]]
