/* English */ <merchant navy#7528400>

--- a/en/m/merchant navy.776864.wikitext
+++ b/en/m/merchant navy.776864.wikitext
@@ -5,4 +5,7 @@
 
 #[[civilian]] [[naval]] fleet dedicated to the sea transport of [[goods]] and [[merchandise]]
 
+====Translations====
+* Dutch: [[handelsvloot]] {{f|m}}
+
 [[Category:Nautical]]
