/* Translations */ fix Hebrew <blow#7530399>

--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -129,7 +129,7 @@ From {{etyl|ang|en}} {{term|blawan|blāwan|make an air current, sound a wind ins
 * Finnish: {{t-|fi|räjähtää}}
 * French: {{t+|fr|exploser}}
 * German: [[hochgehen]], [[in]] [[die]] [[Luft]] [[gehen]], [[explodieren]]
-* Hebrew: [[להתפוצץ]] (le'hitpotzetz)
+* Hebrew: {{t|he|התפוצץ|tr=hitpotzétz}}
 {{trans-mid}}
 * Japanese: [[爆発]]する ([[ばくはつ]]する, bakuhatsu-suru)
 * Korean: [[터지다]] (teojida)
@@ -212,7 +212,7 @@ From {{etyl|ang|en}} {{term|blawan|blāwan|make an air current, sound a wind ins
 *: Mandarin: {{zh-tsp|吹氣|吹气|chuī qì}}
 * Dutch: {{t+|nl|blazen}}
 * Finnish: {{t+|fi|puhaltaa}}
-* Hebrew: [[לנפח]] (le'nape'akh)
+* Hebrew: {{t|he|ניפח|tr=nipéakh}}
 {{trans-mid}}
 * Korean: [[불다]] (bulda)
 * [[Macedonian]]: {{t-|mk|дува|tr=dúva|xs=Macedonian}}
