/* Noun */ add from Transwiki <bamboo#7534902>

--- a/en/b/bamboo.746517.wikitext
+++ b/en/b/bamboo.746517.wikitext
@@ -14,6 +14,7 @@ From {{etyl|nl|en}} {{term|bamboe|lang=nl}}, from {{etyl|pt|en}} {{term|bambu|la
 # <!--DefA--> A plant. A [[grass]] of the [[Poaceae]] family, characterised by its woody, hollow, round, straight, jointed stem.
 # <!--DefB--> The wood of the bamboo plant as a material or [[cane]].
 # a [[didgeridoo]]
+# {{slang}} A [[British]] [[military]] or Honourable East India Company [[employee]], who spent so much time in Indonesia, India, or Malaysia that they never went back home.
 
 ====Derived terms====
 * [[bamboo man]]
