--- a/en/b/bamboo.746517.wikitext
+++ b/en/b/bamboo.746517.wikitext
@@ -11,7 +11,7 @@ From {{etyl|nl|en}} {{term|bamboe|lang=nl}}, from {{etyl|pt|en}} {{term|bambu|la
 ===Noun===
 {{en-noun}}
 
-# <!--DefA--> A plant. A [[grass]] of the [[Poaceae]] family, characterised by its woody, hollow, round, straight, jointed stem.
+# <!--DefA--> A [[plant]]; a [[grass]] of the [[Poaceae]] family, characterised by its woody, hollow, round, straight, jointed stem.
 # <!--DefB--> The wood of the bamboo plant as a material or [[cane]].
 # a [[didgeridoo]]
 # {{slang}} A [[British]] [[military]] or Honourable East India Company [[employee]], who spent so much time in Indonesia, India, or Malaysia that they never went back home.
@@ -83,8 +83,8 @@ The translations below need to be checked by native speakers and inserted into t
 * {{ttbc|Korean}}: [[대나무]]
 {{checktrans-bottom}}
 
-====Adjective====
-'''bamboo''' (''no'' {{compar}} ''or'' {{superl}})
+===Adjective===
+{{en-adj|-}}
 
 # <!--DefC-->Made of the wood of the bamboo.
 
