--- a/en/m/multiplication.26254.wikitext
+++ b/en/m/multiplication.26254.wikitext
@@ -18,7 +18,7 @@ When applied to whole numbers, multiplication can be considered as repeated addi
 * Chinese: [[乘法]] (chéng fǎ)
 * Chinese Characters: [[乘]] / [[乗]]
 * Czech: {{t-|cs|násobení|n}}
-* Dutch: {{t+|nl|vermenigvuldiging|f}}
+* Dutch: {{t+|nl|vermenigvuldigen|n}}
 * Estonian: [[korrutamine]]
 * Finnish: {{t+|fi|kertolasku}}
 * French: {{t+|fr|multiplication|f}}
