iwiki +[[:kn:break]] <break#7536737>

--- a/en/b/break.6806.wikitext
+++ b/en/b/break.6806.wikitext
@@ -623,6 +623,7 @@ From {{etyl|en|fr}} {{term|lang=en|break}}.
 [[hy:break]]
 [[io:break]]
 [[it:break]]
+[[kn:break]]
 [[kk:break]]
 [[sw:break]]
 [[ku:break]]
