-{{top}} +{{trans-top}} <vectorial#7538686>

--- a/en/v/vectorial.855963.wikitext
+++ b/en/v/vectorial.855963.wikitext
@@ -3,16 +3,17 @@
 ===Adjective===
 {{en-adj}}
 
-#{{maths}} Of or pertaining to a [[vector]]
+# {{maths}} Of or pertaining to a [[vector]]
 
 ====Translations====
-{{top}}
+{{trans-top}}
 * French: [[vectoriel]]
 * Italian: {{t-|it|vettoriale}}
-{{mid}}
+{{trans-mid}}
 * Portuguese: {{t+|pt|vectorial}}
 * Spanish: {{t+|es|vectorial}}
-{{bottom}}
+{{trans-bottom}}
+
 {{anagrams:en/aceilortv}}
 
 ----
@@ -25,7 +26,7 @@
 # {{maths|lang=es}} [[#English|vectorial]]
 
 ====Related terms====
-*[[vector]]
+* [[vector]]
 
 [[es:vectorial]]
 [[fr:vectorial]]
