t+nv:[[dlǫ́ʼii]] t-balance ([[WT:EDIT|Assisted]]) <weasel#7539181>

--- a/en/w/weasel.8232.wikitext
+++ b/en/w/weasel.8232.wikitext
@@ -57,8 +57,9 @@ From {{etyl|ang|en}} {{term|weosule||lang=ang}}, cognates in other Germanic lang
 
 {{trans-top|any mammal of the genus ''Mustela''}}
 * Finnish: {{t+|fi|kärppä}}
-* [[Scottish Gaelic]]: {{t-|gd|neas|f|xs=Scottish Gaelic}}
+* Navajo: {{tø|nv|dlǫ́ʼii}}
 {{trans-mid}}
+* [[Scottish Gaelic]]: {{t-|gd|neas|f|xs=Scottish Gaelic}}
 * [[West Frisian]]: {{t-|fy|marter|c|xs=West Frisian}}
 {{trans-bottom}}
 
