--- a/en/b/bent.6793.wikitext
+++ b/en/b/bent.6793.wikitext
@@ -150,6 +150,7 @@ From Persian {{fa-Arab|[[بند]]}} (''band'').
 [[io:bent]]
 [[ku:bent]]
 [[hu:bent]]
+[[ml:bent]]
 [[nl:bent]]
 [[ja:bent]]
 [[no:bent]]
