t+id:[[bajing]] ([[WT:EDIT|Assisted]]) <squirrel#7544104>

--- a/en/s/squirrel.8243.wikitext
+++ b/en/s/squirrel.8243.wikitext
@@ -46,6 +46,7 @@ From {{etyl|xno}} ''[[esquirel]]'', from {{etyl|fro}} ''[[escurel]]'' (modern {{
 * Hebrew: [[סנאי]] (snai) {{m}}
 * Hungarian: {{t+|hu|mókus}}
 * Icelandic: {{t+|is|íkorni|m}}
+* Indonesian: {{t|id|bajing}}
 * [[Interlingua]]: [[sciuro]], [[scuriolo]]
 * Irish: [[iora]] {{m}}, [[madra crainn]] {{m}}
 * [[Isthmus Zapotec]]: [[chisa]]
