--- a/en/t/then.7353.wikitext
+++ b/en/t/then.7353.wikitext
@@ -51,6 +51,7 @@ Old English ''[[þonne]]''. Cognate with German [[denn]].
 * Japanese: {{t|ja|そのとき|tr=sono toki|sc=Jpan}}, {{t|ja|その時点|tr=sono jiten|sc=Jpan}}
 {{trans-mid}}
 * Kurdish: [[hingê]], [[wê]] [[dem|demê]], [[wî]] [[çax|çaxî]], wî [[wext|wextî]], wê [[gav|gavê]]
+* Latin: {{t|la|tum}},  {{t|la|deinde}}
 * Lithuanian: {{t-|lt|tada|xs=Lithuanian}}
 * Malay: [[pada masa yang sama]]
 * Norwegian: {{t+|no|da}}, {{t|no|den gang}}
