--- a/en/b/bleed.6801.wikitext
+++ b/en/b/bleed.6801.wikitext
@@ -133,6 +133,7 @@ From {{etyl|ang}} {{term|bledan|lang=ang}}
 [[id:bleed]]
 [[it:bleed]]
 [[hu:bleed]]
+[[ml:bleed]]
 [[nl:bleed]]
 [[oc:bleed]]
 [[pl:bleed]]
@@ -141,6 +142,6 @@ From {{etyl|ang}} {{term|bledan|lang=ang}}
 [[ta:bleed]]
 [[te:bleed]]
 [[th:bleed]]
-[[vi:bleed]]
 [[uk:bleed]]
+[[vi:bleed]]
 [[zh:bleed]]
