en-det <a number of#7550417>

--- a/en/a/a number of.776983.wikitext
+++ b/en/a/a number of.776983.wikitext
@@ -1,12 +1,11 @@
 ==English==
 
-===Phrase===
-'''[[a]] [[number]] [[of]]'''
+===Determiner===
+{{en-det|pos=[[a]] [[number]] [[of]]}}
+
 # [[several|Several]].
 #: '''''A number of''' people have commented on it.''
 # Several of.
 #: ''I spoke with '''a number of''' them about it.''
-
-[[Category:English idioms]]
 
 [[zh:a number of]]
