t+ksh:[[wodka]] t+sh:[[votka]] t-balance ([[WT:EDIT|Assisted]]) <vodka#7551549>

--- a/en/v/vodka.34100.wikitext
+++ b/en/v/vodka.34100.wikitext
@@ -39,8 +39,9 @@
 * Irish: {{t-|ga|vodca|m|xs=Irish}}
 * Italian: {{t+|it|vodka|f}}
 * Japanese: [[ウオッカ]] (uokka)
-{{trans-mid}}
 * Korean: [[보드카]] bodeuka
+{{trans-mid}}
+* [[Kölsch]]: {{tø|ksh|wodka}}
 * Latin: {{t-|la|vodca}}
 * Latvian: {{t|lv|degvīns|xs=Latvian}}
 * Lithuanian: {{t-|lt|degtinė|f|xs=Lithuanian}}
@@ -54,6 +55,7 @@
 * Serbian:
 *: Cyrillic: [[вотка#Serbian|вотка]] {{f}}
 *: Roman: [[votka#Serbian|votka]] {{f}}
+* [[Serbo-Croatian]]: {{t|sh|votka}}
 * Slovak: {{t-|sk|vodka|f}}
 * Spanish: {{t-|es|vodka|f}}
 * Swahili: {{t-|sw|vodka|xs=Swahili}}
