iwiki +[[:ml:attend]] <attend#7552895>

--- a/en/a/attend.7359.wikitext
+++ b/en/a/attend.7359.wikitext
@@ -71,6 +71,7 @@ From {{etyl|fro}} {{term|atendre}} < {{etyl|la}} {{term|attendere||to stretch to
 [[it:attend]]
 [[lo:attend]]
 [[hu:attend]]
+[[ml:attend]]
 [[ja:attend]]
 [[pl:attend]]
 [[ro:attend]]
