--- a/en/w/weight.7355.wikitext
+++ b/en/w/weight.7355.wikitext
@@ -174,6 +174,7 @@
 {{trans-top|in mathematics}}
 * French: {{t+|fr|pondérer}}
 * German: [[gewichten]]
+* Italian: {{t|it|ponderare}}
 {{trans-mid}}
 * Romanian: [[a pondera]]
 * Swedish: {{t+|sv|vikta}}
