iwiki +[[:hy:consume]] <consume#7560157>

--- a/en/c/consume.34056.wikitext
+++ b/en/c/consume.34056.wikitext
@@ -119,6 +119,7 @@ From {{etyl|la}} ''[[consumere]]''.
 [[et:consume]]
 [[fa:consume]]
 [[fr:consume]]
+[[hy:consume]]
 [[io:consume]]
 [[id:consume]]
 [[it:consume]]
