--- a/en/w/weight.7355.wikitext
+++ b/en/w/weight.7355.wikitext
@@ -164,10 +164,12 @@
 * French: {{t+|fr|alourdir}}
 * German: {{t+|de|beschweren}}
 {{trans-mid}}
+* Italian: {{t|it|appesantire}}
 * Swedish: [[göra tyngre]]
 {{trans-bottom}}
 
 {{trans-top|oppress}}
+* Italian: {{t|it|gravare}}
 * Swedish: [[tynga]]
 {{trans-mid}}
 {{trans-bottom}}
