--- a/en/a/AK.741222.wikitext
+++ b/en/a/AK.741222.wikitext
@@ -1,36 +1,6 @@
-{{also|ak|aK|ak'}}
-==English==
+[[Category:Move to Wiktionary 2007-09]]
+[[Category:Move to Wiktionary Yiddish]]
 
-==={{abbreviation}}===
-'''AK'''
-
-# {{US}} [[Alaska]], a state of the [[United States of America]].
-# an [[AK-47]], [[AK-74]], or related assault rifle
-
-[[Category:US States]]
-
-----
-==German==
-==={{abbreviation|lang=de}}===
-'''AK'''
-# [[Abendkasse]], ([[Abend]] + [[Kasse]]) an abbreviation often found on concert or event tickets indicating a price that has to be paid at the venue at the evening of the event, as opposed to a presale ticket price
-
-----
-==Yiddish==
-
-===Abbreviation===
-'''AK''' 
-
-# [[alter kaker]]: {{context|vulgar}} [[old]] [[shitter]]; approximately the equivalent of the English term [[old fart]].
+AK is the English short-hand term for the Yiddish expression "alter kaker." Literally "old shitter," it is approximately the equivalent of the English term "old fart." While always vulgar, it can be used affectionately.
 
 {{seeCites|A.K.}}
-
-
-[[ar:AK]]
-[[de:AK]]
-[[fr:AK]]
-[[it:AK]]
-[[pl:AK]]
-[[fi:AK]]
-[[vi:AK]]
-[[tr:AK]]
