t+nv:[[nahashchʼidí]] ([[WT:EDIT|Assisted]]) <badger#7581760>

--- a/en/b/badger.8231.wikitext
+++ b/en/b/badger.8231.wikitext
@@ -74,6 +74,7 @@ From {{etyl|enm}} {{term|bageard||marked by a badge|lang=enm}}, from {{term|bage
 * [[Lower Sorbian]]: [[jazw]], [[šwińc]]
 * [[Macedonian]]: {{t|mk|јазовец|m|tr=jázovec|xs=Macedonian}}
 * [[Manx]]: [[broc]]
+* Navajo: {{tø|nv|nahashchʼidí}}
 * Norwegian: [[grevling]] {{m}}
 * [[Occitan]]: [[tais]] {{m}}, [[rabàs]] {{m}}
 * Polish: {{t+|pl|borsuk|m}}
