--- a/en/w/weasel.8232.wikitext
+++ b/en/w/weasel.8232.wikitext
@@ -146,6 +146,7 @@ From {{etyl|ang|en}} {{term|weosule||lang=ang}}, cognates in other Germanic lang
 [[io:weasel]]
 [[it:weasel]]
 [[hu:weasel]]
+[[ml:weasel]]
 [[nl:weasel]]
 [[no:weasel]]
 [[oc:weasel]]
