/* Translations */ <American English#7591091>

--- a/en/a/American English.34094.wikitext
+++ b/en/a/American English.34094.wikitext
@@ -33,7 +33,7 @@
 * Japanese: {{t-|ja|アメリカ英語|tr=Amerika eigo}}, {{t|ja|米英語|tr=beieigo}}, {{t-|ja|米語|tr=beigo}}
 * Korean: [[미국 영어]] ([[美國英語]])
 * Norwegian: {{t-|no|amerikansk-engelsk}}
-* Polish: {{t|pl|amerykański angielski}}
+* Polish: [[amerykański]] [[angielski]]
 * Portuguese: {{t|pt|inglês americano|m}}
 * Russian: {{t|ru|американский английский}}
 * Spanish: {{t|es|ingles americano|m}}
