--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -7,8 +7,9 @@
 ===Etymology===
 {{etyl|ang}} {{term|lang=ang|igland|īġland}}.  The S was added by confusion with {{etyl|fr}} {{term|lang=fr|isle}}, which is not related but is instead from {{etyl|la}} {{term|lang=la|insula}}.  Cognate with {{etyl|de}} {{term|lang=de|Aue||water-meadow}} and {{etyl|la}} {{term|lang=la|aqua}}.  Compare {{etyl|nl}} {{term|lang=nl|eiland}}, {{etyl|de}} {{term|lang=de|Eiland}}, Old Norse ''[[eyland]]'' and {{etyl|en}} {{term|lang=en|ey}} as in [[Anglesey]], [[Bardsey]], [[Ely]].
 
-
-ur mom
+===Pronunciation===
+* {{audio|en-us-island.ogg|Audio (US)}}
+* {{rhymes|ænd}}
 
 ===Noun===
 {{en-noun}}
