Undo revision 7592003 by [[Special:Contributions/173.168.212.191|173.168.212.191]] ([[User talk:173.168.212.191|Talk]]) <island#7592052>

--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -231,5 +231,56 @@ isolate:
 {{checktrans-top}}
 {{trans-bottom}}
 
+===See also===
+* [[archipelago]]
+* [[atoll]]
+* [[cay]], [[key]]
+* [[continent]]
+* [[Island]] - [[Iceland]] in other languages
+* [[peninsula]]
 
+[[Category:1000 English basic words]]
+
+[[ang:island]]
+[[ar:island]]
+[[ast:island]]
+[[zh-min-nan:island]]
+[[ca:island]]
+[[cs:island]]
+[[de:island]]
+[[et:island]]
+[[el:island]]
+[[es:island]]
+[[fa:island]]
+[[fr:island]]
+[[gl:island]]
+[[ko:island]]
+[[io:island]]
+[[id:island]]
+[[it:island]]
+[[ka:island]]
+[[kk:island]]
+[[sw:island]]
+[[ku:island]]
+[[lo:island]]
+[[la:island]]
+[[lt:island]]
+[[hu:island]]
+[[ml:island]]
+[[nl:island]]
+[[ja:island]]
+[[no:island]]
+[[oc:island]]
+[[pl:island]]
+[[pt:island]]
+[[ru:island]]
+[[simple:island]]
+[[fi:island]]
+[[sv:island]]
+[[ta:island]]
+[[te:island]]
+[[th:island]]
+[[tr:island]]
+[[uk:island]]
+[[vi:island]]
 [[zh:island]]
