--- a/en/c/consumption.34058.wikitext
+++ b/en/c/consumption.34058.wikitext
@@ -70,6 +70,7 @@
 [[et:consumption]]
 [[el:consumption]]
 [[fr:consumption]]
+[[io:consumption]]
 [[id:consumption]]
 [[it:consumption]]
 [[kn:consumption]]
