--- a/en/a/abaco.4397.wikitext
+++ b/en/a/abaco.4397.wikitext
@@ -44,6 +44,7 @@ From {{etyl|la|it}} '''[[abacus#Latin|abacus]]''' "[[counting board]]" < {{etyl|
 [[de:abaco]]
 [[hy:abaco]]
 [[io:abaco]]
+[[ia:abaco]]
 [[it:abaco]]
 [[lt:abaco]]
 [[hu:abaco]]
