-{{top}} +{{trans-top}}, sorted/rebalanced translations <alcoholometric#7606207>

--- a/en/a/alcoholometric.745842.wikitext
+++ b/en/a/alcoholometric.745842.wikitext
@@ -6,14 +6,13 @@
 # Of or pertaining to the [[measurement]] of the [[alcohol]] content of [[beer]]s, [[wine]]s and [[spirit]]s
 
 ====Related terms====
-*[[alcoholometer]]
-*[[alcoholometry]]
+* [[alcoholometer]]
+* [[alcoholometry]]
 
 ====Translations====
-{{top}}
+{{trans-top}}
 * Italian: {{t-|it|alcolometrico}}, {{t-|it|alcoolometrico}}
-{{mid}}
-
-{{bottom}}
+{{trans-mid}}
+{{trans-bottom}}
 
 [[el:alcoholometric]]
