--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -150,7 +150,7 @@
 * Turkish: {{t+|tr|ada}}
 * Ukrainian: {{t-|uk|острів|m|xs=Ukrainian}}
 * [[Upper Sorbian]]: [[kupa]] {{f}}
-* [[Urdu]]: [[ٹاپو]]
+* Urdu: [[ٹاپو]]
 * Vietnamese: {{t+|vi|đảo|xs=Vietnamese}}
 * Welsh: {{t-|cy|ynys|f|xs=Welsh}}
 * Yiddish: {{t-|yi|אינדזל|m|tr=indzl|xs=Yiddish}}
