t+it:[[specie]] ([[WT:EDIT|Assisted]]) <species#7612796>

--- a/en/s/species.4327.wikitext
+++ b/en/s/species.4327.wikitext
@@ -79,6 +79,7 @@ From {{etyl|la}} {{term|species|speciēs|appearance; quality|lang=la}}, from {{t
 * Czech: {{t+|cs|druh|m}}
 * Danish: {{t+|da|art|c}}
 * Finnish: {{t+|fi|laji}}
+* Italian: {{t|it|specie|f}}
 * Japanese: {{t+|ja|種|tr=shu}} ([[しゅ]])(''academic''), {{t+|ja|類|tr=rui}} ([[るい]]), {{t+|ja|種類|tr=shurui}} ([[しゅるい]])(''colloquial'')
 {{trans-mid}}
 * [[Macedonian]]: {{t-|mk|вид|m|tr=vid}}
