--- a/en/a/apathist.855078.wikitext
+++ b/en/a/apathist.855078.wikitext
@@ -3,7 +3,7 @@
 ===Noun===
 {{en-noun}}
 
-# {{rfquote-sense}} One who is comfortable having no feelings towards a particular topic.  An attitude that reflects a "dont' know" and "don't care" outlook.  Often used to describe feelings towards religion, e.g. "When it comes to religion, I consider myself an apathist."
+One who is comfortable having no feelings towards a particular topic.  An attitude that reflects a "dont' know" and "don't care" outlook.  Often used to describe feelings towards religion, e.g. "When it comes to religion, I consider myself an apathist."
 
 ====Synonyms====
 * [[apathete]]
