--- a/en/n/Nintendo.775484.wikitext
+++ b/en/n/Nintendo.775484.wikitext
@@ -1,3 +1,4 @@
+{{wikipedia}}
 ==English==
 
 ===Etymology===
@@ -23,7 +24,14 @@ From [[w:Nintendo|Nintendo Company, Limited]] (任天堂株式会社), the Japan
 ====Usage notes====
 This term may have trademark status.
 
-====External links====
-* {{pedialite}}
+====Translations====
+{{trans-top}}
+* Chinese:
+*: Mandarin: {{t|zh|任天堂|tr=Réntiāntáng|sc=Hani}}
+* {{trreq|Finnish}}
+{{trans-mid}}
+* {{trreq|Japanese}}
+* {{trreq|Russian}}
+{{trans-bottom}}
 
 [[hu:Nintendo]]
