iwiki +[[:li:simple]] <simple#7630771>

--- a/en/s/simple.7363.wikitext
+++ b/en/s/simple.7363.wikitext
@@ -285,6 +285,7 @@ From {{etyl|la|ca}} {{term|lang=la|simplex}}.
 [[ku:simple]]
 [[lo:simple]]
 [[lt:simple]]
+[[li:simple]]
 [[hu:simple]]
 [[ml:simple]]
 [[nl:simple]]
