/* Faroese */should be under header using [[Project:AutoWikiBrowser|AWB]] <mega#7637401>

--- a/en/m/mega.34066.wikitext
+++ b/en/m/mega.34066.wikitext
@@ -49,14 +49,14 @@ From the prefix [[mega-]].
 ----
 
 ==Faroese==
-{{fo-conj-mega}}
-
 ===Verb===
 '''mega'''
 
 # [[must]], [[may]]
 
-{{-}}
+
+====Conjugation====
+{{fo-conj-mega}}
 
 [[Category:Faroese verbs]]
 
