t+it:[[succhiarlo]] ([[WT:EDIT|Assisted]]) <blow#7645863>

--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -195,6 +195,7 @@ From {{etyl|ang|en}} {{term|blawan|blāwan|make an air current, sound a wind ins
 * Dutch: {{t+|nl|pijpen}}
 * Finnish: [[ottaa]] [[suu|suihin]]
 * French: [[sucer]], [[tailler]] une [[pipe]]
+* Italian: {{t|it|succhiarlo}}
 * Korean: [[아양떨다]] (ayang-tteolda)
 * [[Macedonian]]: {{t-|mk|пуши|tr=púši}},  {{t|mk|дудла|tr=dúdla}}
 {{trans-mid}}
