/* English */ <count down#7657116>

--- a/en/c/count down.856261.wikitext
+++ b/en/c/count down.856261.wikitext
@@ -13,4 +13,7 @@
 # To await a precisely timed expected event.
 #: ''The party was '''counting down''' the days to Inauguration.''
 
+====Translations====
+* Esperanto: [[dekalkuli]]
+
 [[fr:count down]]
