+{{rfc-level|Pronunciation at L4+ not in L3 POS section|lang=da}}, sorted/rebalanced translations, trans link [[Tswana]] <pig#7657521>

--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -88,8 +88,8 @@
 * Korean: [[돼지]] (dwaeji)
 * Kurdish: {{ku-Arab|[[به‌راز]]}} {{g|Kurdish}}
 * [[Ladin]]: [[porcel]]
-{{trans-mid}}
 * Latin: [[sus]] {{c}}, [[porcus]] {{m}}<!--do not put the scientific name here-->
+{{trans-mid}}
 * Latvian: {{t+|lv|cūka|f|xs=Latvian}}
 * Lithuanian: [[kiaulė]] {{g|Lithuanian}}
 * [[Lower Sorbian]]: [[swinja]] {{f}}
@@ -125,7 +125,7 @@
 * [[Telugu]]: [[పంది]] (paMdi)
 * [[Tok Pisin]]: [[pik]]
 * Tongan: [[puaka]]
-* Tswana: {{t-|tn|kolobe|xs=Tswana}} (9/10)
+* [[Tswana]]: {{t-|tn|kolobe|xs=Tswana}} (9/10)
 * Turkish: {{t+|tr|domuz}}
 * Ukrainian: {{t-|uk|свиня|f|tr=svynja|xs=Ukrainian}}
 * [[Upper Sorbian]]: [[swinjo]] {{n}}
@@ -302,6 +302,7 @@
 From {{etyl|non|da}} {{term|pík|lang=non}}.
 
 ====Pronunciation====
+{{rfc-level|Pronunciation at L4+ not in L3 POS section|lang=da}}
 * {{IPA|/pig/|[pʰiɡ̊]|lang=da}}
 * {{homophones|pik|lang=da}}
 
