t+fi:[[pollari]] ([[WT:EDIT|Assisted]]) <cop#7659641>

--- a/en/c/cop.26062.wikitext
+++ b/en/c/cop.26062.wikitext
@@ -41,6 +41,7 @@ Sometimes explained as deriving from copper buttons or badges of early [[NYPD]] 
 =====Translations=====
 {{trans-top|police officer}}
 * Bulgarian: {{t|bg|полицай|m|sc=Cyrl}},  {{t|bg|ченге|n|sc=Cyrl}}
+* Finnish: {{t|fi|pollari}}
 * French: {{t+|fr|flic|m}}, {{t+|fr|keuf|m}}
 * Hungarian: {{t-|hu|zsaru}}
 * Norwegian: [[purk]] {{m}}
