--- a/en/x/X factor.802821.wikitext
+++ b/en/x/X factor.802821.wikitext
@@ -12,6 +12,8 @@
 # {{idiom}} An unknown or hard-to-define influence; a [[factor]] with unknown or unforeseeable consequences.
 #* '''1992''', Lia Matera, ''Prior Convictions'', page 121
 #*: We slid into our office, past two women discussing the "'''X factor'''," an apparently undefined quality their firm felt they lacked.
+
+YOU GOT RICK ROLL'D
 #* '''1999''', Joel R. DeLuca, ''Political Savvy: Systematic Approaches to Leadership Behind the Scenes'', page 75
 #*: The map can be misleading. It can appear to contain all the relevant information, but in real life, there is always an '''X factor'''.
 #* '''2007''', Tasmina Perry, ''Daddy's Girls'', page 12
