--- a/en/l/limu.801596.wikitext
+++ b/en/l/limu.801596.wikitext
@@ -1,6 +1,6 @@
 ==Finnish==
 
-===Noun===
+===Noun===lioooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooofffffffffffffffffffffffifo,l  i8olkjuliuklooffffffffffffffffffffffffffffffffffouyyyuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuu
 {{fi-noun|limu|type=solu}}
 
 # {{colloquial|lang=fi}} [[soda]], [[soft drink]]
