Undo revision 7669567 by [[Special:Contributions/75.16.244.108|75.16.244.108]] ([[User talk:75.16.244.108|Talk]]) <limu#7669572>

--- a/en/l/limu.801596.wikitext
+++ b/en/l/limu.801596.wikitext
@@ -1,6 +1,6 @@
 ==Finnish==
 
-===Noun===lioooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooofffffffffffffffffffffffifo,l  i8olkjuliuklooffffffffffffffffffffffffffffffffffouyyyuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuu
+===Noun===
 {{fi-noun|limu|type=solu}}
 
 # {{colloquial|lang=fi}} [[soda]], [[soft drink]]
