--- a/en/l/Las Vegas.741384.wikitext
+++ b/en/l/Las Vegas.741384.wikitext
@@ -16,9 +16,12 @@ From {{etyl|es}} {{term|las|lang=es}} {{term|vegas||the meadows|lang=es}}.
 
 ====Translations====
 {{trans-top|city}}
+* Arabic: {{t|ar|لاس فيغاس|m|tr=las fiighas|sc=Arab}}
 * Armenian: {{t-|hy|Լաս Վեգաս|tr=Las Vegas|sc=Armn|xs=Armenian}}
-* Navajo: {{tø|nv|Naʼazhoosh}}
 {{trans-mid}}
+* Japanese: {{t|ja|ラスベガス|tr=Rasubegasu|sc=Jpan}}
+* Mandarin: {{t|zh|拉斯維加斯|sc=Hani}},  {{t|zh|拉斯维加斯|tr=Lāsīwéijiāsī|sc=Hani}}
+* Navajo: {{tø|nv|Naʼazhoosh}}
 * Russian: {{t|ru|Лас-Вегас|m|tr=Las-Vegas|sc=Cyrl}}
 {{trans-bottom}}
 
