/* English */ lemmatize and fmt Hebrew <bend#7683861>

--- a/en/b/bend.6792.wikitext
+++ b/en/b/bend.6792.wikitext
@@ -50,7 +50,7 @@ From {{etyl|enm}} {{term|benden}} < {{etyl|ang}} {{term|bendan}} to bind or bend
 * Esperanto: {{t-|eo|kurbigi|xs=Esperanto}},  {{t-|eo|fleksi|xs=Esperanto}}
 * Finnish: {{t+|fi|taivuttaa}}
 * German: {{t+|de|beugen}}
-* Hebrew: [[לכופף]] (le'khofef)
+* Hebrew: {{t|he|כופף|tr=koféf}}
 * Hungarian: {{t+|hu|hajlít}}, {{t-|hu|görbít}}
 * Italian: {{t+|it|curvare}}, {{t+|it|piegare}}
 {{trans-mid}}
@@ -97,7 +97,7 @@ From {{etyl|enm}} {{term|benden}} < {{etyl|ang}} {{term|bendan}} to bind or bend
 * Dutch: {{t+|nl|buigen}}, {{t+|nl|plooien}}
 * Finnish: {{t+|fi|taipua}}
 * German: {{t+|de|biegen}},  {{t+|de|biegen}}, {{t|de|durchbiegen}}
-* Hebrew: [[להתכופף]] (le'hitkofef)
+* Hebrew: {{t|he|התכופף|tr=hitkoféf}}
 * Japanese: {{t-|ja|曲がる|tr=magaru}}
 {{trans-mid}}
 * Russian: {{t|ru|гнуться|tr=gnút'sja}},  {{t|ru|изгибаться|tr=izgibát'sja}}
