--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -116,6 +116,7 @@
 * [[Norfuk]]: {{tø|cpe-nor|ailen}}
 * [[Norman]]: [[île]]
 * Norwegian: {{t+|no|øy|m|f}}
+* [[Nottoway-Meherrin]]: {{tø|nwy|eohtessieh}}
 * [[Occitan]]: {{t-|oc|illa|f|xs=Occitan}}
 * Old English: {{t-|ang|ieg|f|alt=īeġ|xs=Old English}}
 * {{trreq|Oriya}}
