--- a/en/e/estadounidense.4303.wikitext
+++ b/en/e/estadounidense.4303.wikitext
@@ -30,6 +30,11 @@
 
 # of the [[United States]] of America
 
+===See also===
+* [[yanqui#Spanish|yanqui]]
+* [[gringo#Spanish|gringo]]
+* [[norteamericano#Spanish|norteamericano]]
+
 [[Category:es:Nationalities]]
 
 [[es:estadounidense]]
