--- a/en/n/nonane.775490.wikitext
+++ b/en/n/nonane.775490.wikitext
@@ -2,7 +2,7 @@
 
 ===Noun===
 {{en-noun}}
-#{{organic compound}} Any of vary many [[isomeric]] [[alkane]]s, of comon  formula of C<sub>9</sub>H<sub>20</sub>, having 9 [[carbon]] atoms.
+#{{organic compound}} Any of vary many [[isomeric]] [[alkane]]s, of general formula C<sub>9</sub>H<sub>20</sub>, having 9 [[carbon]] atoms.
 
 ====Translations====
 {{trans-top|nonane}}
