--- a/en/g/grognard.855664.wikitext
+++ b/en/g/grognard.855664.wikitext
@@ -1,29 +1,30 @@
+[[Category:Move to Wiktionary 2007-12]]
+{{merge|grognard}}
+
 ==English==
 
 ===Etymology===
-From {{etyl|fr|en}} {{term|grognard||lang=fr|old soldier}}
+{{etyl|fr}} ''grognard''..
 
 ===Noun===
 {{en-noun}}
-
-# An [[old]] [[soldier]].
-# {{games|slang}} A longtime [[wargamer]], particularly one concerned with game mechanics, historical accuracy and realism.
-* {{computer|games|slang}} Inside the [[computer]] game development industry, a game [[fan]] who will buy every game released in a certain [[genre ]]of computer game ([[RTS]], or computer role-playing game, etc.). 
-
+* {{games|slang}} Someone who [[enjoys]] playing [[board]] [[wargames]]. 
+* {{computer games|slang}} Inside the [[computer]] game development industry, a game [[fan]] who will buy every game released in a certain [[genre ]]of computer game ([[RTS]], or computer role-playing game, etc.). 
 ----
 
 ==French==
 
 ===Etymology===
-French, from (Fr. "grumbler" from Fr. "grogner" 1. snarl 2. grunt 3. growl 4. grumble [râler] 5. gripe [râler] and Fr. "grognon" 1. grouch 2. curmudgeon)
+French '''grognard''' (Fr. "grumbler" from Fr. "grogner" 1. snarl 2. grunt 3. growl 4. grumble [râler] 5. gripe [râler] and Fr. "grognon" 1. grouch 2. curmudgeon)
 
-====Noun====
-{{fr-noun|m}}
+====noun====
+{{fr-noun-m}}
 
-* An old [[veteran]] [[soldier]]; specifically the [[grenadiers]] of the Imperial Guard (Grenadiers à Pied de la Garde Impériale); an [[old]] [[complaining]] soldier. 
+* Old [[veteran]] [[soldiers]] under Napolean Bonaparte; specifically the [[Grenadiers]] of the Imperial Guard (Grenadiers à Pied de la Garde Impériale). They were the soldiers who were old enough to know what was going on, but junior enough in rank not to be able to affect it, and constantly complained about it.
 
-===References===
+
+
+==References==
 * ''[http://www.napoleonguide.com/glossary.htm Napoleonic Glossary]''
 
-[[fr:grognard]]
-[[vi:grognard]]
+[[Category:Wargames]]
