--- a/en/g/grognard.855664.wikitext
+++ b/en/g/grognard.855664.wikitext
@@ -1,10 +1,7 @@
-[[Category:Move to Wiktionary 2007-12]]
-{{merge|grognard}}
-
 ==English==
 
 ===Etymology===
-{{etyl|fr}} ''grognard''..
+{{etyl|fr}} ''grognard''.
 
 ===Noun===
 {{en-noun}}
@@ -17,14 +14,14 @@
 ===Etymology===
 French '''grognard''' (Fr. "grumbler" from Fr. "grogner" 1. snarl 2. grunt 3. growl 4. grumble [râler] 5. gripe [râler] and Fr. "grognon" 1. grouch 2. curmudgeon)
 
-====noun====
+===Noun===
 {{fr-noun-m}}
 
 * Old [[veteran]] [[soldiers]] under Napolean Bonaparte; specifically the [[Grenadiers]] of the Imperial Guard (Grenadiers à Pied de la Garde Impériale). They were the soldiers who were old enough to know what was going on, but junior enough in rank not to be able to affect it, and constantly complained about it.
 
 
 
-==References==
+===References===
 * ''[http://www.napoleonguide.com/glossary.htm Napoleonic Glossary]''
 
 [[Category:Wargames]]
