--- a/en/g/grognard.855664.wikitext
+++ b/en/g/grognard.855664.wikitext
@@ -1,10 +1,12 @@
 ==English==
 
 ===Etymology===
-{{etyl|fr}} ''grognard''.
+From {{etyl|fr|en}} {{term|grognard||lang=fr|old soldier}}  
 
 ===Noun===
 {{en-noun}}
+
+# An [[old]] [[soldier]]. 
 * {{games|slang}} Someone who [[enjoys]] playing [[board]] [[wargames]]. 
 * {{computer games|slang}} Inside the [[computer]] game development industry, a game [[fan]] who will buy every game released in a certain [[genre ]]of computer game ([[RTS]], or computer role-playing game, etc.). 
 ----
@@ -12,7 +14,7 @@
 ==French==
 
 ===Etymology===
-French '''grognard''' (Fr. "grumbler" from Fr. "grogner" 1. snarl 2. grunt 3. growl 4. grumble [râler] 5. gripe [râler] and Fr. "grognon" 1. grouch 2. curmudgeon)
+French ''[[grognard]]'', "grumbler" from Fr. ''[[grogner]]'' 1. snarl 2. grunt 3. growl 4. grumble ''[[râler]]'' 5. gripe ''[[râler]]'' and Fr. ''[[grognon]]'' 1. grouch 2. curmudgeon.
 
 ===Noun===
 {{fr-noun-m}}
