--- a/en/g/grognard.855664.wikitext
+++ b/en/g/grognard.855664.wikitext
@@ -17,11 +17,9 @@ From {{etyl|fr|en}} {{term|grognard||lang=fr|old soldier}}
 French ''[[grognard]]'', "grumbler" from Fr. ''[[grogner]]'' 1. snarl 2. grunt 3. growl 4. grumble ''[[râler]]'' 5. gripe ''[[râler]]'' and Fr. ''[[grognon]]'' 1. grouch 2. curmudgeon.
 
 ===Noun===
-{{fr-noun-m}}
+{{fr-noun|m}}
 
-* Old [[veteran]] [[soldiers]] under Napolean Bonaparte; specifically the [[Grenadiers]] of the Imperial Guard (Grenadiers à Pied de la Garde Impériale). They were the soldiers who were old enough to know what was going on, but junior enough in rank not to be able to affect it, and constantly complained about it.
-
-
+* An old [[veteran]] soldier; specifically of the [[grenadiers]] of the Imperial Guard (Grenadiers à Pied de la Garde Impériale); an old [[complaining]] soldier.
 
 ===References===
 * ''[http://www.napoleonguide.com/glossary.htm Napoleonic Glossary]''
