--- a/en/r/rot.26064.wikitext
+++ b/en/r/rot.26064.wikitext
@@ -243,6 +243,6 @@ Old High German ''[[rōt]]'', akin to Old Saxon ''rōd'', compare Dutch ''[[rood
 
 # road, street
 
-====Reference=====
+====Reference====
 
 Tok Pisin texts:  from the beginning to the present / edited by Peter Mühlhäusler, Thomas E. Dutton, Suzanne Romaine. / John Benjamins Publishing Company / Copyright 2003 / ISBN 90 272 4718 8 / page 106
