--- a/en/r/rot.26064.wikitext
+++ b/en/r/rot.26064.wikitext
@@ -243,7 +243,7 @@ Old High German ''[[rōt]]'', akin to Old Saxon ''rōd'', compare Dutch ''[[rood
 
 # road, street
 #* ''''2003''', Mühlhäusler et al., ''Tok Pisin texts'', John Benjamins Publishing Company, page 9:
-#*: Planti liklik rot i stap long ailan hia.
+#*: ''Planti liklik '''rot''' i stap long ailan hia.''
 #*:: Many little roads exist on this island.
 
 ====Reference====
