--- a/en/s/squirrel.8243.wikitext
+++ b/en/s/squirrel.8243.wikitext
@@ -3,7 +3,7 @@
 [[Image:Eichhörnchen Düsseldorf Hofgarten edit.jpg|thumb|Red Squirrel|250px]]
 
 ===Etymology===
-From {{etyl|xno}} ''[[esquirel]]'', from {{etyl|fro}} ''[[escurel]]'' (modern {{etyl|fr}} {{term|écureuil|lang=fr}}), from {{VL.}} ''[[scuriolus]]'', diminutive of ''[[scurius]]'', variant of {{etyl|la}} {{term|sciurus|lang=la}}, from {{etyl|grc}} {{term|σκίουρος|lang=grc|sc=polytonic|tr=skíouros}} < {{term|σκιά||shade, shadow|lang=grc|sc=polytonic|tr=skiá}} + {{term|οὐρά||tail|lang=grc|sc=polytonic|tr=ourá}}.
+From {{etyl|xno}} ''[[esquirel]]'', from {{etyl|fro}} ''[[escurel]]'' (modern {{etyl|fr}} {{term|écureuil|lang=fr}}), from {{etyl|VL.}} ''[[scuriolus]]'', diminutive of ''[[scurius]]'', variant of {{etyl|la}} {{term|sciurus|lang=la}}, from {{etyl|grc}} {{term|σκίουρος|lang=grc|sc=polytonic|tr=skíouros}} < {{term|σκιά||shade, shadow|lang=grc|sc=polytonic|tr=skiá}} + {{term|οὐρά||tail|lang=grc|sc=polytonic|tr=ourá}}.
 
 ===Pronunciation===
 * {{a|RP}} & [[Australian English|AusE]] {{IPA|/'skwɪr.<sup>ə</sup>l}}
