--- a/en/b/bind.6798.wikitext
+++ b/en/b/bind.6798.wikitext
@@ -54,6 +54,7 @@ From {{etyl|ang}} ''[[bindan]]''.
 {{trans-top|put together in a cover, as of books}}
 * Bulgarian: {{t|bg|подвързвам}}
 {{trans-mid}}
+* Esperanto: {{t|eo|bindi}}
 {{trans-bottom}}
 
 ====Derived terms====
