--- a/en/d/division.26256.wikitext
+++ b/en/d/division.26256.wikitext
@@ -198,6 +198,7 @@ From Latin ''[[divisio]]'', noun of process form from perfect passive participle
 # {{sports}} division, [[league]]; a organization of sports teams that habitually play against each other for a championship; the level on which a certain team plays, as compared to others
 
 [[ar:division]]
+[[cs:division]]
 [[de:division]]
 [[et:division]]
 [[el:division]]
