/* Translations */ +eo [[specio]] <species#7742917>

--- a/en/s/species.4327.wikitext
+++ b/en/s/species.4327.wikitext
@@ -111,6 +111,7 @@ From {{etyl|la}} {{term|species|speciēs|appearance; quality|lang=la}}, from {{t
 * {{ttbc|Chinese}}: [[種]], [[种]] (zhǒng); [[類]], [[类]] (lèi); [[種類]], [[种类]] (zhǒnglèi)
 * {{ttbc|Danish}}: {{t+|da|art|c}}
 * {{ttbc|Dutch}}: {{t|nl|soort|f}}
+* {{ttbc|Esperanto}}: {{t|eo|specio}}
 * {{ttbc|French}}: {{t+|fr|espèce|f}}
 * {{ttbc|German}}: {{t+|de|Art|f}}, {{t|de|Spezies|f}}
 * {{ttbc|Hungarian}}: {{t|hu|fajta}} (1), {{t|hu|faj}} (2,3)
