--- a/en/n/Niphon.775906.wikitext
+++ b/en/n/Niphon.775906.wikitext
@@ -13,7 +13,7 @@ From {{etyl|ja|sort=niphon}} [[日本]] (formerly ''Niffon'', now ''Nippon'' or 
 #*: '''Niphon''', the chief island, is nine hundred miles long, and one hundred miles in average width.
 
 ====Translations====
-{{trans-top}}
+{{trans-top|Honshu, the largest island of Japan. }}
 * Latin: [[Niphonia]] {{f}}
 {{trans-mid}}
 {{trans-bottom}}
