tgloss:"of or pertaining to North Africa" tgloss:"native or inhabitant of North Africa" ([[WT:EDIT|Assisted]]) <North African#7753050>

--- a/en/n/North African.741821.wikitext
+++ b/en/n/North African.741821.wikitext
@@ -6,7 +6,7 @@
 # Of or pertaining to [[North Africa]]
 
 ====Translations====
-{{trans-top}}
+{{trans-top|of or pertaining to North Africa}}
 * Ido: nord-Afrikana
 * Italian: {{t-|it|nordafricano}}
 {{trans-mid}}
@@ -19,7 +19,7 @@
 # Native or inhabitant of [[North Africa]]
 
 ====Translations====
-{{trans-top}}
+{{trans-top|native or inhabitant of North Africa}}
 * Ido: nord-Afrikano
 * Italian: {{t-|it|nordafricano}}
 {{trans-mid}}
