sorted/rebalanced translations, trans link [[Ido]] <North African#7753551>

--- a/en/n/North African.741821.wikitext
+++ b/en/n/North African.741821.wikitext
@@ -7,7 +7,7 @@
 
 ====Translations====
 {{trans-top|of or pertaining to North Africa}}
-* Ido: nord-Afrikana
+* [[Ido]]: nord-Afrikana
 * Italian: {{t-|it|nordafricano}}
 {{trans-mid}}
 * Polish: [[północnoafrykański]] {{m}}
@@ -20,7 +20,7 @@
 
 ====Translations====
 {{trans-top|native or inhabitant of North Africa}}
-* Ido: nord-Afrikano
-* Italian: {{t-|it|nordafricano}}
+* [[Ido]]: nord-Afrikano
 {{trans-mid}}
+* Italian: {{t-|it|nordafricano}}
 {{trans-bottom}}
