--- a/en/t/then.7353.wikitext
+++ b/en/t/then.7353.wikitext
@@ -231,6 +231,7 @@ Old English ''[[þonne]]''. Cognate with German [[denn]].
 [[lo:then]]
 [[li:then]]
 [[hu:then]]
+[[ml:then]]
 [[nl:then]]
 [[ja:then]]
 [[no:then]]
