--- a/en/c/collective security.803561.wikitext
+++ b/en/c/collective security.803561.wikitext
@@ -10,7 +10,7 @@
 * [[collective defence]]/[[collective defense|se]]
 
 ====Translations====
-{{trans-top}}
+{{trans-top|concept of maintaining peace among all nations or members of a group}}
 * Finnish: [[kollektiivinen]] {{t+|fi|turvallisuus}}
 {{trans-mid}}
 {{trans-bottom}}
