--- a/en/v/vectorial.855963.wikitext
+++ b/en/v/vectorial.855963.wikitext
@@ -6,7 +6,7 @@
 # {{maths}} Of or pertaining to a [[vector]]
 
 ====Translations====
-{{trans-top}}
+{{trans-top|of or pertaining to a vector}}
 * French: [[vectoriel]]
 * Italian: {{t-|it|vettoriale}}
 {{trans-mid}}
