--- a/en/d/division.26256.wikitext
+++ b/en/d/division.26256.wikitext
@@ -48,10 +48,11 @@ From Latin ''[[divisio]]'', noun of process form from perfect passive participle
 * Finnish: {{t-|fi|jakaminen}}, {{t+|fi|jako}}
 * French: {{t+|fr|division|f}}
 * German: {{t+|de|Teilung|f}}
+* Greek: {{t|el|διαίρεση|f|tr=δiéresi|sc=Grek}}
 * Hebrew: [[חלוקה]] (khaluqa) {{f}}
 * Italian: {{t+|it|divisione|f}}
-* Kurdish: {{t+|ku|دابه‌ش|sc=ku-Arab}}
 {{trans-mid}}
+* Kurdish: {{t+|ku|دابه‌ش|sc=ku-Arab}}
 * Polish: [[podział]] {{m}}
 * Romanian: [[diviziune]] {{f}}
 * Russian: {{t+|ru|раздел|m|tr=razdél}}, {{t+|ru|деление|n|tr=delénije}}
@@ -84,10 +85,11 @@ From Latin ''[[divisio]]'', noun of process form from perfect passive participle
 * Finnish: {{t+|fi|jako}}, {{t-|fi|jakaminen}}
 * French: {{t+|fr|division|f}}
 * German: {{t+|de|Division|f}}
+* Greek: {{t|el|διαίρεση|f|tr=δiéresi|sc=Grek}}
 * Hebrew: [[חילוק]] (khiluq) {{m}}
 * Italian: {{t+|it|divisione|f}}
-* Kurdish: {{ku-Arab|[[دابه‌ش]]}}
 {{trans-mid}}
+* Kurdish: {{ku-Arab|[[دابه‌ش]]}}
 * Persian: {{t-|fa|تقسیم|xs=Persian}}
 * Polish: {{t+|pl|dzielenie|n}}
 * Romanian: {{t-|ro|impartire|f}}
@@ -105,9 +107,10 @@ From Latin ''[[divisio]]'', noun of process form from perfect passive participle
 * Czech: {{t-|cs|dělení|n}}
 * Dutch: [[deling]] {{f}}; [[staartdeling]] {{f}}
 * Finnish: {{t+|fi|jakolasku}}
+* Greek: {{t|el|διαίρεση|f|tr=δiéresi|sc=Grek}}
 * Kurdish: {{ku-Arab|[[دابه‌ش]]}}
-* Polish: {{t+|pl|dzielenie|n}}
 {{trans-mid}}
+* Polish: {{t+|pl|dzielenie|n}}
 * Russian: [[деление]] (delénije) {{n}}
 * Swahili: {{t+|sw|ugavi|xs=Swahili}},  {{t+|sw|farakano|xs=Swahili}}
 * Swedish: {{t+|sv|division|c}}
@@ -140,6 +143,7 @@ From Latin ''[[divisio]]'', noun of process form from perfect passive participle
 * [[Afrikaans]]: [[afdeling]]
 * Czech: {{t-|cs|divize|f}}
 * Dutch: [[afdeling]] {{f}}, [[divisie]] {{f}}, [[eenheid]] {{f}}
+* Greek: {{t|el|διεύθυνση|f|tr=δiefθinsi|sc=Grek}}
 * Kurdish: {{t-|ku|به‌ش|sc=ku-Arab}}
 * Romanian: [[divizie]] {{f}}
 {{trans-mid}}
@@ -160,6 +164,7 @@ From Latin ''[[divisio]]'', noun of process form from perfect passive participle
 {{trans-bottom}}
 
 {{trans-top|disagreement; a difference of viewpoint}}
+* Greek: {{t|el|διχόνοια|f|tr=δikhónia|sc=Grek}},  {{t|el|διχασμός|m|tr=δikhasmós|sc=Grek}}
 * Swahili: {{t+|sw|ugavi|xs=Swahili}},  {{t+|sw|farakano|xs=Swahili}}
 {{trans-mid}}
 * [[West Frisian]]: {{t|fy|ôfstimming|c|xs=West Frisian}}
