t+ja:[[ニンテンドー]] t+ja:[[ファミコン]] t+ru:[[Нинтендо]] ([[WT:EDIT|Assisted]]) <Nintendo#7773210>

--- a/en/n/Nintendo.775484.wikitext
+++ b/en/n/Nintendo.775484.wikitext
@@ -30,8 +30,8 @@ This term may have trademark status.
 *: Mandarin: {{t-|cmn|任天堂|tr=Réntiāntáng|sc=Hani}}
 * Finnish: {{t-|fi|Nintendo}}
 {{trans-mid}}
-* Japanese: {{t|ja|ファミコン|sc=Jpan}}
-* {{trreq|Russian}}
+* Japanese: {{t|ja|ファミコン|sc=Jpan}},  {{t|ja|ニンテンドー|tr=Nintendō|sc=Jpan}},  {{t|ja|ファミコン|tr=famikon|sc=Jpan}}
+* Russian: {{t|ru|Нинтендо|tr=Ninténdo|sc=Cyrl}}
 {{trans-bottom}}
 
 [[hu:Nintendo]]
