/* Derived terms */ + [[make a break for it]]; made section collapsible <break#7775056>

--- a/en/b/break.6806.wikitext
+++ b/en/b/break.6806.wikitext
@@ -482,15 +482,20 @@ The sense relating to a spell of weather is most likely to be used after a perio
 * {{sense|rest or pause|usually from work}} [[time out]]
 
 ====Derived terms====
+{{rel-top3|Terms derived from ''break'' (noun)}}
 * [[beach break]]
 * [[break of day]]
 * [[daybreak]]
+{{rel-mid3}}
 * [[give someone a break]]<!--as in "give me a break!"-->
 * [[heartbreak]]
 <!--"icebreaker" is derived from "break the ice"-->
 * [[jailbreak]]
+{{rel-mid3}}
+* [[make a break for it]]
 * [[point break]]
 * [[take a break]]
+{{rel-bottom}}
 
 ====Translations====
 {{trans-top|instance of breaking something into two pieces}}
