--- a/en/m/multicolour.34081.wikitext
+++ b/en/m/multicolour.34081.wikitext
@@ -12,7 +12,7 @@
 # {{chiefly|Canadian|Australian|Jamaican|British|International}} Having, [[resembling]], or pertaining to many or a world of [[colour]]s.
 
 ====Translations====
-{{trans-top}}
+{{trans-top|having many colours}}
 * Dutch: {{t-|nl|bont}}, {{t|nl|bonte}}, {{t|nl|veelkleurig}}, {{t|nl|veelkleurige}}
 * Esperanto: {{t|eo|multkolora|xs=Esperanto}}
 * French: {{t|fr|multicooleur}}
