tgloss:"person who lends money" ([[WT:EDIT|Assisted]]) <moneylender#7802074>

--- a/en/m/moneylender.720245.wikitext
+++ b/en/m/moneylender.720245.wikitext
@@ -12,7 +12,7 @@
 * [[loan shark]]
 
 ====Translations====
-{{trans-top}}
+{{trans-top|person who lends money}}
 * Portuguese: {{t+|pt|agiota|c}}
 {{trans-mid}}
 {{trans-bottom}}
